--- a/src/main/webapp/resources/client/css/style.css
+++ b/src/main/webapp/resources/client/css/style.css
@@ -70,7 +70,7 @@
 }
 
 .btn.border-secondary:hover {
-    background: var(--bs-secondary) !important;
+    background: var(--bs-primary) !important;
     color: var(--bs-white) !important;
 }
 
